--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,10 +17,10 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.5.3
+    - python >=3.7
   run:
-    - python >=3.5.3
-    - typing_extensions
+    - python >=3.7
+    - typing_extensions >=3.7.4.3
 
 test:
   imports:
