--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,15 +17,20 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
-    - setuptools
+    - python {{ python_min }}
+    - setuptools >=51
+    - wheel >=0.36
   run:
-    - python >=3.7
-    - typing_extensions >=3.7.4.3
+    - python >={{ python_min }}
 
 test:
   imports:
     - janus
+  commands:
+    - pip check
+  requires:
+    - pip
+    - python {{ python_min }}
 
 about:
   home: https://github.com/aio-libs/janus/
